Refactor symbol and node management